--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+  <title>Shortly | URL shortening API</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,71 +13,106 @@
   </style>
 </head>
 <body>
+  <header>
+    <nav>
+      <img src="/images/logo.svg" alt="Shortly Logo">
+      <ul>
+        <li><a href="">Features</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Resources</a></li>
+      </ul>
+      <ul>
+        <li><a href="">Login</a></li>
+        <li><a href="">Sign Up</a></li>
+      </ul>
+    </nav>
+    <section class="mainHeader">
+      <h1>More than just shorter links</h1>
+      <p>Build your brand’s recognition and get detailed insights on how your links are performing.</p>
+      <a href="">Get Started</a>
+    </section>
+    <div>
+      <img src="/images/illustration-working.svg" alt="">
+    </div>
+  </header>
 
-  Features
-  Pricing
-  Resources
-
-  Login
-  Sign Up
-
-  More than just shorter links
-
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
-
-  Get Started
-  
-  Shorten a link here...
-
-  Shorten It!
-
-  Advanced Statistics
-
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
-
-  Brand Recognition
-
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
-
-  Detailed Records
-
-  Gain insights into who is clicking your links. Knowing when and where 
-  people engage with your content helps inform better decisions.
-
-  Fully Customizable
-
-  Improve brand awareness and content discoverability through customizable 
-  links, supercharging audience engagement.
-
-  Boost your links today
-
-  Get Started
-
-  Features
-
-  Link Shortening
-  Branded Links
-  Analytics
-
-  Resources
-
-  Blog
-  Developers
-  Support
-
-  Company
-
-  About
-  Our Team
-  Careers
-  Contact
+  <main>
+    <form>
+      <label for="linkInput"></label>
+      <input type="text" name="linkInput" id="linkInput" placeholder="Shorten a link here...">
+      <button type="submit">Shorten It!</button>
+    </form>
+    <section>
+      <div class="mainContentText">
+        <h2>Advanced Statistics</h2>
+        <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
+      </div>
+      <div>
+        <ul>
+          <li>
+            <div class="image">
+              <img src="" alt="">
+            </div>
+            <div class="modalText">
+              <h3>Brand Recognition</h3>
+              <p>Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.</p>
+            </div>
+          </li>
+          <li>
+            <div class="image">
+              <img src="" alt="">
+            </div>
+            <div class="modalText">
+              <h3>Detailed Records</h3>
+              <p>Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.</p>
+            </div>
+          </li>
+          <li>
+            <div class="image">
+              <img src="" alt="">
+            </div>
+            <div class="modalText">
+              <h3>Fully Customizable</h3>
+              <p>Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h2>Boost your links today</h2>
+      <a href="">Get Started</a>
+    </section>
+  </main>
+  <footer>
+    <section class="footerNav">
+      <ul>
+        <li>Features</li>
+        <li><a href="">Link Shortening</a></li>
+        <li><a href="">Branded Links</a></li>
+        <li><a href="">Analytics</a></li>
+      </ul>
+      <ul>
+        <li>Resources</li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Developers</a></li>
+        <li><a href="">Support</a></li>
+      </ul>
+      <ul>
+        <li>Company</li>
+        <li><a href="">About</a></li>
+        <li><a href="">Our Team</a></li>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </section>
+  </footer>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Tiffany Fust</a>.
   </div>
+
+  <script src="/styles.css"></script>
 </body>
 </html>
