layout changes, added copy link button functionality

--- a/index.html
+++ b/index.html
@@ -48,25 +48,12 @@
           <form class="form">
             <label for="linkInput" class="sr-only">Insert Link here:</label>
             <input type="text" name="linkInput" id="linkInput" placeholder="Shorten a link here..." required>
-            <button type="submit" class="button">Shorten It!</button>
+            <button type="submit" class="button shortenButton">Shorten It!</button>
+            <div class="loader"></div> 
           </form>
         </div>
         <div class="linksContainer">
           <ul class="links">
-            <li class="link">
-              <div>
-                <p class="originalLink">https://www.google.com/</p>
-                <p class="shortLink">https://shrtco.de/MqvVSG</p>
-              </div>
-              <button class="copyButton">Copy</button>
-            </li>
-            <li class="link">
-              <div>
-                <p class="originalLink">https://www.google.com/</p>
-                <p class="shortLink">https://shrtco.de/MqvVSG</p>
-              </div>
-              <button class="copyButton">Copy</button>
-            </li>
           </ul>
         </div>
       </section>
