added custom error message and styling to link input, added media queries

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
         <div class="formSection">
           <form class="form">
             <label for="linkInput" class="sr-only">Insert Link here:</label>
-            <input type="text" name="linkInput" id="linkInput" placeholder="Shorten a link here..." required>
+            <input type="text" name="linkInput" id="linkInput" placeholder="Shorten a link here...">
             <button type="submit" class="button shortenButton">Shorten It!</button>
             <div class="loader"></div> 
           </form>
+          <p class="error">Please add a link</p>
         </div>
         <div class="linksContainer">
           <ul class="links">
