added localStorage saving

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="styles.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -133,23 +133,23 @@
           <section class="socialLinks">
             <ul>
               <li>
-                <a href="http://">
-                  <img src="/images/icon-facebook.svg" alt="">
+                <a href="https://www.facebook.com/" target="_blank">
+                  <img src="/images/icon-facebook.svg" alt="facebook icon">
                 </a>
               </li>
               <li>
-                <a href="http://">
-                  <img src="/images/icon-twitter.svg" alt="">
+                <a href="https://twitter.com/" target="_blank">
+                  <img src="/images/icon-twitter.svg" alt="twitter icon">
                 </a>
               </li>
               <li>
-                <a href="http://">
-                  <img src="/images/icon-pinterest.svg" alt="">
+                <a href="https://www.pinterest.ca/" target="_blank">
+                  <img src="/images/icon-pinterest.svg" alt="pinterest icon">
                 </a>
               </li>
               <li>
-                <a href="http://">
-                  <img src="/images/icon-instagram.svg" alt="">
+                <a href="https://www.instagram.com/" target="_blank">
+                  <img src="/images/icon-instagram.svg" alt=" instagram icon">
                 </a>
               </li>
             </ul>
