added hamburger menu

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
         </div>
         <ul class="userLogin">
           <li><a href="">Login</a></li>
-          <li><a href="" class="button">Sign Up</a></li>
+          <li><a href="" class="button signUpBtn">Sign Up</a></li>
         </ul>
+        <div class="menuBtn">
+          <div class="menuBtnBurger"></div>
+        </div>
       </nav>
       <section class="mainHeader">
         <div class="headerText">
