added aria labels

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <section class="footer">
           <section class="footerLogo">
             <div>
-              <img src="/images/logo.svg" alt="">
+              <img src="/images/logo.svg" alt="Shortly Logo">
             </div>
           </section>
           <section class="footerNav">
@@ -136,22 +136,22 @@
           <section class="socialLinks">
             <ul>
               <li>
-                <a href="https://www.facebook.com/" target="_blank">
+                <a href="https://www.facebook.com/" target="_blank" aria-label="Link to facebook">
                   <img src="/images/icon-facebook.svg" alt="facebook icon">
                 </a>
               </li>
               <li>
-                <a href="https://twitter.com/" target="_blank">
+                <a href="https://twitter.com/" target="_blank" aria-label="Link to twitter">
                   <img src="/images/icon-twitter.svg" alt="twitter icon">
                 </a>
               </li>
               <li>
-                <a href="https://www.pinterest.ca/" target="_blank">
+                <a href="https://www.pinterest.ca/" target="_blank" aria-label="Link to pinterest">
                   <img src="/images/icon-pinterest.svg" alt="pinterest icon">
                 </a>
               </li>
               <li>
-                <a href="https://www.instagram.com/" target="_blank">
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Link to instagram">
                   <img src="/images/icon-instagram.svg" alt=" instagram icon">
                 </a>
               </li>
